<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bar_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/deshion"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bar_studio"
        android:enabled="true"
        android:icon="@drawable/studio"
        android:title="@string/studio"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bar_shopping"
        android:enabled="true"
        android:icon="@drawable/shopping"
        android:title="@string/shopping"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bar_my"
        android:enabled="true"
        android:icon="@drawable/my"
        android:title="@string/my"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

</menu>