<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_height="50dp">

    <com.deshion.kol_demo.utils.ImageViewPlus
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/kol_detail_close_icon"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1003" />

    <TextView
        android:id="@+id/kol_detail_close_id"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:maxWidth="130dp"
        android:fontFamily="sans-serif-medium"
        android:singleLine="true"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_close_icon"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_close_icon"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_close_icon" />

    <ImageView
        android:id="@+id/kol_detail_close_follow_btn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/pink_btn"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_close_id"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_close_id"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_close_id"
        app:layout_constraintWidth_percent="0.2043" />

    <TextView
        android:id="@+id/kol_detail_close_follow_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_close_follow_btn"
        app:layout_constraintEnd_toEndOf="@+id/kol_detail_close_follow_btn"
        app:layout_constraintStart_toStartOf="@+id/kol_detail_close_follow_btn"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_close_follow_btn" />

    <ImageView
        android:id="@+id/kol_detail_close_donate_btn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/blue_btn"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_close_follow_btn"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_close_follow_btn"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_close_follow_btn"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.2043" />

    <TextView
        android:id="@+id/kol_detail_close_donate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/donate"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_close_donate_btn"
        app:layout_constraintEnd_toEndOf="@+id/kol_detail_close_donate_btn"
        app:layout_constraintStart_toStartOf="@+id/kol_detail_close_donate_btn"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_close_donate_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>