<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.deshion.kol_demo.utils.ImageViewPlus
        android:id="@+id/tag_expand_icon"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1342" />

    <TextView
        android:id="@+id/tag_expand_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-medium"
        android:singleLine="true"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_expand_icon" />

    <TextView
        android:id="@+id/tag_expand_post_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:text="@string/post_num"
        android:textColor="#8b8b8b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_expand_name" />

    <TextView
        android:id="@+id/tag_expand_kol_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:text="@string/kol_num"
        android:textColor="#8b8b8b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_expand_name" />

    <TextView
        android:id="@+id/tag_expand_introduce"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="3"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_expand_kol_num"
        app:layout_constraintWidth_percent="0.9115" />

    <ImageView
        android:id="@+id/tag_expand_more_pic"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:scaleType="centerInside"
        android:src="@drawable/more"
        app:layout_constraintEnd_toEndOf="@+id/tag_expand_introduce"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/tag_expand_introduce"
        app:layout_constraintTop_toBottomOf="@+id/tag_expand_introduce"
        app:layout_constraintWidth_percent="0.062" />

    <View
        android:id="@+id/tag_expand_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:background="#8b8b8b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_expand_more_pic" />


</androidx.constraintlayout.widget.ConstraintLayout>