<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/tag_item_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#8b8b8b"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp" />

    <com.deshion.kol_demo.utils.ImageViewPlus
        android:id="@+id/tag_icon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_item_line"
        app:layout_constraintWidth_percent="0.1482" />

    <TextView
        android:id="@+id/tag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-medium"
        android:singleLine="true"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_icon"
        app:layout_constraintStart_toEndOf="@+id/tag_icon"
        app:layout_constraintTop_toBottomOf="@+id/tag_item_line"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/tag_post_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:text="@string/post_num"
        android:textColor="#8b8b8b"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tag_name"
        app:layout_constraintTop_toBottomOf="@+id/tag_name" />

    <TextView
        android:id="@+id/tag_kol_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:singleLine="true"
        android:text="@string/kol_num"
        android:textColor="#8b8b8b"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tag_post_num"
        app:layout_constraintStart_toEndOf="@+id/tag_post_num"
        app:layout_constraintTop_toTopOf="@+id/tag_post_num"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/tag_detail_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tag_item_line" />

    <TextView
        android:id="@+id/tag_introduce"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="3"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_icon"
        app:layout_constraintWidth_percent="0.9115" />

    <ImageView
        android:id="@+id/tag_more_pic"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:scaleType="centerInside"
        android:src="@drawable/more"
        app:layout_constraintEnd_toEndOf="@+id/tag_introduce"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/tag_introduce"
        app:layout_constraintTop_toBottomOf="@+id/tag_introduce"
        app:layout_constraintWidth_percent="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>