<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFC"/>

    <com.deshion.kol_demo.utils.ImageViewPlus
        android:id="@+id/kol_detail_icon"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1377" />

    <TextView
        android:id="@+id/kol_detail_id"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-black"
        android:singleLine="true"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_icon"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_icon"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_icon"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.4263" />

    <TextView
        android:id="@+id/kol_detail_blog"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:singleLine="true"
        android:text="@string/unset"
        android:textColor="#8b8b8b"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_icon"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_icon"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_icon"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.2115" />

    <TextView
        android:id="@+id/kol_detail_fans"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:singleLine="true"
        android:text="@string/unset"
        android:textColor="#8b8b8b"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_blog"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_blog"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_blog"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.2315" />

    <ImageView
        android:id="@+id/kol_detail_follow_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:scaleType="fitXY"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/pink_btn"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_id"
        app:layout_constraintStart_toEndOf="@+id/kol_detail_id"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_id"
        app:layout_constraintWidth_percent="0.2743" />

    <TextView
        android:id="@+id/kol_detail_follow_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/kol_detail_follow_btn"
        app:layout_constraintEnd_toEndOf="@id/kol_detail_follow_btn"
        app:layout_constraintStart_toStartOf="@id/kol_detail_follow_btn"
        app:layout_constraintTop_toTopOf="@id/kol_detail_follow_btn" />

    <ImageView
        android:id="@+id/kol_detail_donate_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/blue_btn"
        app:layout_constraintEnd_toEndOf="@id/kol_detail_follow_btn"
        app:layout_constraintStart_toStartOf="@id/kol_detail_follow_btn"
        app:layout_constraintTop_toBottomOf="@id/kol_detail_follow_btn"
        app:layout_constraintWidth_percent="0.2743" />

    <TextView
        android:id="@+id/kol_detail_donate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/donate"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/kol_detail_donate_btn"
        app:layout_constraintEnd_toEndOf="@+id/kol_detail_donate_btn"
        app:layout_constraintStart_toStartOf="@+id/kol_detail_donate_btn"
        app:layout_constraintTop_toTopOf="@+id/kol_detail_donate_btn" />

    <TextView
        android:id="@+id/kol_detail_introduce"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="3"
        android:text="@string/unset"
        android:textColor="#4b4b4b"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kol_detail_donate_btn"
        app:layout_constraintWidth_percent="0.9115" />

    <ImageView
        android:id="@+id/kol_detail_more_pic"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:scaleType="centerInside"
        android:src="@drawable/more"
        app:layout_constraintEnd_toEndOf="@+id/kol_detail_introduce"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/kol_detail_introduce"
        app:layout_constraintTop_toBottomOf="@+id/kol_detail_introduce"
        app:layout_constraintWidth_percent="0.062" />

    <com.deshion.kol_demo.utils.LinearLayoutWarp
        android:id="@+id/kol_detail_tag_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:grivate="left"
        app:isFull="false"
        app:horizontal_Space="5dp"
        app:vertical_Space="5dp"
        app:layout_constraintEnd_toEndOf="@+id/kol_detail_introduce"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/kol_detail_introduce"
        app:layout_constraintTop_toBottomOf="@+id/kol_detail_more_pic"
        app:layout_constraintWidth_percent="0.9115" />

    <View
        android:id="@+id/kol_detail_item_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#8b8b8b"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kol_detail_tag_container" />

</androidx.constraintlayout.widget.ConstraintLayout>